@@ -81,3 +81,5 @@
 - Add mort myre stems and pears to bloom's effect, and add the sound effect for bloom.
 - Add proper sound effects for the explorer's ring and fix leaf-bladed sword's sound effects.
 - Fix wine of zamorak pickup interaction.
+- Static clue drop ids replaced with their level appropriate proxy values
+- Fix a bug where clue scrolls were rerolled to easy for most NPCs
